...


    </RelativeLayout>


    <ScrollView
        android:id="@+id/parent_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/emp_action_bar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/background_page">
...
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_emp_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textAppearance="@style/TextStyle"
                    tools:ignore="TextSizeCheck" />

...
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_emp_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/TextStyle"
                    tools:ignore="TextSizeCheck" />

...
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_emp_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextStyle"
                    tools:ignore="TextSizeCheck" />

...
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_emp_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textAppearance="@style/TextStyle"
...
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black">

                <AutoCompleteTextView
                    android:id="@+id/add_emp_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textAppearance="@style/TextStyle"
                    tools:ignore="LabelFor" />
...
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black">

                <AutoCompleteTextView
                    android:id="@+id/user_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textAppearance="@style/TextStyle"
                    tools:ignore="LabelFor" />
...
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black">

                <AutoCompleteTextView
                    android:id="@+id/add_emp_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textAppearance="@style/TextStyle"
                    tools:ignore="LabelFor" />
...
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_emp_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

...
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_emp_c_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    tools:ignore="TextSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton

                android:id="@+id/add_emp_btn"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_42sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Add Employee"
                app:cornerRadius="@dimen/_11sdp" />

...
