...
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextStyle" />

            </com.google.android.material.textfield.TextInputLayout>
...
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextStyle"
                    tools:ignore="TextSizeCheck" />

...
                android:text="Forgot password"
                android:textSize="@dimen/_10sdp"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/login_btn"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_42sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="LOGIN"
                app:cornerRadius="@dimen/_14sdp" />

...
